# Omnidia

./: .copier-answers.yml  .gitignore  CONTRIBUTING.md  README.md  fixtures.py  mkdocs.yml  pyproject.toml  reinit.sh  requirements.txt  setdata.py  sha256-hash-python
.github/ISSUE_TEMPLATE/: bug_report.md
core/: settings.py  urls.py  watcher.py  wsgi.py
docs/: gen_ref_nav.py
docs/reference/: cli.md
graph/: __init__.py  bulk.py  fixtures.py  models.py  urls.py  views.py
locale/en-us/LC_MESSAGES/: django.po
locale/fr/LC_MESSAGES/: django.po
neograph/: apps.py  fixtures.py  models.py  urls.py  views.py
omneo/core/: settings.py  urls.py  wsgi.py
omneo/graph/: __init__.py  exceptions.py  factory.py  models.py  urls.py  views.py
omneo/templates/: home.html
omnidia/: admin.py  decorators.py  models.py  translation.py  urls.py  utils.py  views.py  watcher.py
scripts/: empty_database.sh  export_env.sh  install.sh  load_fixtures.sh  run.sh  start_neo4j
src/omnidia/: __init__.py  __main__.py  cli.py  db.py  exclusion.py  scanner.py  watcher.py
static/css/: base.css  bootstrap.slate.min.css  bs-callout.css  navbar-left.css  sticky-footer.css
static/js/: foswig.js  object_properties.js
templates/: base.html  datasets.html  files.html  home.html  objects.html
templates/model/: home.html
templates/partials/: navbar-left.html  navbar-top.html
tests/: __init__.py  test_cli.py
