[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[project]
name = "omnidia"
version = {use_scm = true}
description = "File (and abstract object) manager using a graph database and a web interface."
authors = [{name = "Timothée Mazzucotelli", email = "pawamoy@pm.me"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
keywords = []
dynamic = ["version", "classifiers"]
classifiers = ["Development Status :: 4 - Beta"]
dependencies = [
    "fastapi~=0.68",
    "watchdog~=2.1",
    "neo4j~=4.3",
    "httpx~=0.18",
    "loguru~=0.5",
]

[project.urls]
Homepage = "https://pawamoy.github.io/omnidia"
Documentation = "https://pawamoy.github.io/omnidia"
Changelog = "https://pawamoy.github.io/omnidia/changelog"
Repository = "https://github.com/pawamoy/omnidia"
Issues = "https://github.com/pawamoy/omnidia/issues"
Discussions = "https://github.com/pawamoy/omnidia/discussions"
Gitter = "https://gitter.im/omnidia/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
omnidia = "omnidia.cli:main"

[tool.pdm]
package-dir = "src"

[tool.pdm.dev-dependencies]
duty = ["duty~=0.6"]
docs = [
    "mkdocs~=1.1; python_version >= '3.7'",
    "mkdocs-coverage~=0.2; python_version >= '3.7'",
    "mkdocs-gen-files~=0.3; python_version >= '3.7'",
    "mkdocs-literate-nav~=0.4; python_version >= '3.7'",
    "mkdocs-material~=7.1; python_version >= '3.7'",
    "mkdocstrings~=0.15; python_version >= '3.7'",
    "toml~=0.10; python_version >= '3.7'",
]
format = [
    "autoflake~=1.4",
    "black~=20.8b1",
    "isort~=5.8",
]
maintain = [
    # TODO: remove this section when git-changelog is more powerful
    "git-changelog~=0.4",
]
quality = [
    "darglint~=1.7",
    "flake8-bandit~=2.1",
    "flake8-black~=0.2",
    "flake8-bugbear~=21.3",
    "flake8-builtins~=1.5",
    "flake8-comprehensions~=3.4",
    "flake8-docstrings~=1.6",
    "flake8-pytest-style~=1.4",
    "flake8-string-format~=0.3",
    "flake8-tidy-imports~=4.2",
    "flake8-variables-names~=0.0",
    "pep8-naming~=0.11",
    "wps-light~=0.15",
]
tests = [
    "pytest~=6.2",
    "pytest-cov~=2.11",
    "pytest-randomly~=3.6",
    "pytest-sugar~=0.9",
    "pytest-xdist~=2.2",
]
typing = ["mypy~=0.812"]

[tool.black]
line-length = 120
exclude = "tests/fixtures"

[tool.isort]
line_length = 120
not_skip = "__init__.py"
multi_line_output = 3
force_single_line = false
balanced_wrapping = true
default_section = "THIRDPARTY"
known_first_party = "omnidia"
include_trailing_comma = true
